few logos added and resource page updated

--- a/resources.html
+++ b/resources.html
@@ -154,11 +154,6 @@
 
             <!-- Center Column -->
             <div class="col">
-                <!-- Alert -->
-                <!-- <div class="alert alert-success alert-dismissible" role="alert">
-          <h2>Publications</h2>
-        </div> -->
-
                 <div id="main">
                     <div id="cpaper">
                         <div class="contentText">
@@ -245,10 +240,14 @@
                                 <h5 class="card-title">
                                     Transformer Architecture: The Positional Encoding
                                     <br />
-                                    <small> Let's use sinusoidal functions to inject the order of words in our model </small>
+                                    <small> Let's use sinusoidal functions to inject the order of words in our model
+                                    </small>
                                 </h5>
                                 <p class="card-text">
-                                    Transformer architecture was introduced as a novel pure attention-only sequence-to-sequence architecture by Vaswani et al. Its ability for parallelizable training and its general performance improvement made it a popular option among NLP (and recently CV) researchers.
+                                    Transformer architecture was introduced as a novel pure attention-only
+                                    sequence-to-sequence architecture by Vaswani et al. Its ability for parallelizable
+                                    training and its general performance improvement made it a popular option among NLP
+                                    (and recently CV) researchers.
                                 </p>
                                 <p style="font-size: small; color: rgb(132, 132, 149);">
                                     September 20, 2019</p>
@@ -280,7 +279,12 @@
                                     BEAM Search
                                 </h5>
                                 <p class="card-text">
-                                    BEAM Search, a variant of breadth-first Search, is an algorithm that searches a weighted graph for an optimal path from some start node S to some goal node G. The difference between BEAM search and breadth-first search is that at every level of the search tree, only the top β candidates are chosen for further exploration. Here, β is known as the beam width. The reasoning behind this is that a path from S to G is likely to pass through some top number of most promising nodes. 
+                                    BEAM Search, a variant of breadth-first Search, is an algorithm that searches a
+                                    weighted graph for an optimal path from some start node S to some goal node G. The
+                                    difference between BEAM search and breadth-first search is that at every level of
+                                    the search tree, only the top β candidates are chosen for further exploration. Here,
+                                    β is known as the beam width. The reasoning behind this is that a path from S to G
+                                    is likely to pass through some top number of most promising nodes.
                                 </p>
                                 <p style="font-size: small; color: rgb(132, 132, 149);">
                                     Jun 5, 2023</p>
@@ -312,7 +316,10 @@
                                     Foundations of NLP Explained Visually: Beam Search, How It Works
                                 </h5>
                                 <p class="card-text">
-                                    Many NLP applications such as machine translation, chatbots, text summarization, and language models generate some text as their output. In addition applications like image captioning or automatic speech recognition (ie. Speech-to-Text) output text, even though they may not be considered pure NLP applications.
+                                    Many NLP applications such as machine translation, chatbots, text summarization, and
+                                    language models generate some text as their output. In addition applications like
+                                    image captioning or automatic speech recognition (ie. Speech-to-Text) output text,
+                                    even though they may not be considered pure NLP applications.
                                 </p>
                                 <p style="font-size: small; color: rgb(132, 132, 149);">
                                     April 1, 2021</p>
@@ -344,9 +351,13 @@
                                     Unmasking BERT: The Key to Transformer Model Performance
                                 </h5>
                                 <p class="card-text">
-                                    It seems clear that at the moment, practice is far ahead of theory in the technological life cycle of Deep Learning for NLP. We’re using approaches like masking which seem to work, and we fiddle with the numbers a bit and it works a little better or a little worse. Yet we can’t fully explain why that happens! 
+                                    It seems clear that at the moment, practice is far ahead of theory in the
+                                    technological life cycle of Deep Learning for NLP. We’re using approaches like
+                                    masking which seem to work, and we fiddle with the numbers a bit and it works a
+                                    little better or a little worse. Yet we can’t fully explain why that happens!
 
-                                    Some people may find this frustrating and disappointing. If we can’t explain it, then how can we use it? 
+                                    Some people may find this frustrating and disappointing. If we can’t explain it,
+                                    then how can we use it?
                                 </p>
                                 <p style="font-size: small; color: rgb(132, 132, 149);">
                                     August 18, 2023</p>
@@ -365,15 +376,24 @@
                                         <!-- <span class="badge badge-info">BERT</span> -->
                                         <!-- <span class="badge badge-light">Masking</span> -->
                                         <span class="badge badge-info">neptune.ai</span>
+                                    </div>
+                            </div>
+                        </div>
+                        <br />
                         <div class="card card-publication">
-                            <img class="card-img-top" style="width: 20%;" src="images/resources/lora.png"
-                                alt="Card image cap">
+                            <img class="card-img-top" style="width: 20%;"
+                                src="images/resources/lora.png" alt="Card image cap">
                             <div class="card-body">
                                 <h5 class="card-title">
                                     In-depth Understanding of LoRa and Finetuning a LLM using LoRa
                                 </h5>
                                 <p class="card-text">
-                                    With all the latest innovations in the field of AI, it has definitely become easy to find solutions to many NLP problems. The concept of finetuning comes into picture only when you have questions about your custom data which the pretrained LLM has not seen and none of the typical prompt engineering techniques are giving you the expected results.
+                                    With all the latest innovations in the field of AI, it has
+                                    definitely become easy to find solutions to many NLP problems. The
+                                    concept of finetuning comes into picture only when you have
+                                    questions about your custom data which the pretrained LLM has not
+                                    seen and none of the typical prompt engineering techniques are
+                                    giving you the expected results.
                                 </p>
                                 <p style="font-size: small; color: rgb(132, 132, 149);">
                                     August 25, 2023</p>
@@ -381,7 +401,8 @@
                                     <div>
                                         <a class="btn btn-primary btn-sm"
                                             href="https://levelup.gitconnected.com/in-depth-understanding-of-lora-and-finetuning-a-llm-using-lora-266aaa991fcd"
-                                            role="button" aria-expanded="false" aria-controls="bib0">Read More</a>
+                                            role="button" aria-expanded="false"
+                                            aria-controls="bib0">Read More</a>
                                     </div>
                                     <div>
                                         <span class="badge badge-primary">LoRa</span>
@@ -396,17 +417,13 @@
                                 </did>
                             </div>
                         </div>
+                        <br />
                     </div>
                 </div>
-                        </div><!--/Center Column-->
 
-            <!-- Right Column -->
-            <!-- <div class="col-md-3 col-xs-5">
-
-      </div> -->
-            </div>
-
-    </div><!--/container-fluid-->
+            </div><!--/container-fluid-->
+        </div>
+    </div>
 
     <footer class="footer mt-auto py-3" style="background: rgb(138, 8, 8);">
         <div class="container">
