--- a/index.html
+++ b/index.html
@@ -154,7 +154,20 @@
                      src="images/figures/18.jpg" alt="Second slide">
                   </div>
                   <div class="carousel-item">
-                     <img class="d-block w-100 slider-img" src="images/figures/17.png" alt="Second slide">
+                     <img class="d-block w-100 slider-img" 
+                     src="images/figures/21.jpg" alt="Second slide">
+                  </div>
+                  <div class="carousel-item">
+                     <img class="d-block w-100 slider-img" 
+                     src="images/figures/22.png" alt="Second slide">
+                  </div>
+                  <div class="carousel-item">
+                     <img class="d-block w-100 slider-img" 
+                     src="images/figures/23.png" alt="Second slide">
+                  </div>
+                  <div class="carousel-item">
+                     <img class="d-block w-100 slider-img" src="images/figures/17.png"
+                     alt="Second slide">
                   </div>
                   <div class="carousel-item">
                      <img class="d-block w-100 slider-img" src="images/figures/13.svg" alt="Second slide">
