updated data in few pages

--- a/education.html
+++ b/education.html
@@ -179,7 +179,7 @@
          </div><!--/Left Column-->
          
          <!-- Center Column -->
-         <div class="col-md-6 col-xs-5">
+         <div class="col-md-6 col-xs-5"  style="font-size: 12px;">
             <h5>Education</h5>
             <div class="row">
                <div class="col-md-6">
