--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
             <div class="table-wrapper">
                <table class="table table-hover">
                   <thead>
-                     <tr>
+                     <tr style="font-size: 12px;">
                         <th scope="col">#</th>
                         <th scope="col">Paper Title</th>
                         <th scope="col">Link</th>
@@ -265,7 +265,7 @@
                      </tr>
                   </thead>
                   <tbody>
-                     <tr>
+                     <tr style="font-size: 12px;">
                         <th scope="row">C</th>
 
                         <td>SocFedGPT: Federated GPT-based Adaptive Content Filtering System Leveraging
@@ -273,7 +273,7 @@
                         <td><a href="#">Link</a></td>
                         <td>Springer</td>
                      </tr>
-                     <tr>
+                     <tr style="font-size: 12px;">
                         <th scope="row">W</th>
 
                         <td>Bangla Emotion Detection Dataset With An Extended Taxonomy And Its
@@ -281,7 +281,7 @@
                         <td><a href="#">Link</a></td>
                         <td>Springer</td>
                      </tr>
-                     <tr>
+                     <tr style="font-size: 12px;">
                         <th scope="row">W</th>
 
                         <td>FLASH: Federated Learning-Based LLMs for Advanced Query Processing in Social
@@ -289,7 +289,7 @@
                         <td><a href="#">Link</a></td>
                         <td>Springer</td>
                      </tr>
-                     <tr>
+                     <tr style="font-size: 12px;">
                         <th scope="row">W</th>
 
                         <td>4WHContext: A Context Based Hate Speech Detection Framework From Social Media
@@ -297,7 +297,7 @@
                         <td><a href="#">Link</a></td>
                         <td>Springer</td>
                      </tr>
-                     <tr>
+                     <tr style="font-size: 12px;">
                         <th scope="row">W</th>
 
                         <td>Combating Echo Chambers In Online Social Network By Increasing Content
@@ -305,7 +305,7 @@
                         <td><a href="#">Link</a></td>
                         <td>Springer</td>
                      </tr>
-                     <tr>
+                     <tr style="font-size: 12px;">
                         <th scope="row">W</th>
 
                         <td>CAMERA: Context Based Emotion Detection Framework And Its
@@ -314,14 +314,14 @@
                         <td>Springer</td>
                      </tr>
 
-                     <tr>
+                     <tr style="font-size: 12px;">
                         <th scope="row">W</th>
                         <td>EVOLVE: Predicting User Evolution and Network Dynamics in Social Media Using Fine-Tuned
                            GPT-like Model</td>
                         <td><a href="https://arxiv.org/abs/2407.09691">Link</a></td>
                         <td>Springer</td>
                      </tr>
-                     <tr>
+                     <tr style="font-size: 12px;">
                         <th scope="row">W</th>
 
                         <td>SocialRec: User Activity Based Post Weighted Dynamic Personalized Post Recommendation System
@@ -329,21 +329,21 @@
                         <td><a href="https://arxiv.org/abs/2407.09747">Link</a></td>
                         <td>Springer</td>
                      </tr>
-                     <tr>
+                     <tr style="font-size: 12px;">
                         <th scope="row">B</th>
 
                         <td>Recommendation System: History, Present and Future</td>
                         <td><a href="#">Link</a></td>
                         <td>Arxiv</td>
                      </tr>
-                     <tr>
+                     <tr style="font-size: 12px;">
                         <th scope="row">B</th>
 
                         <td>Blockchain-Integrated Secure Framework for Enhanced E-Government Services</td>
                         <td><a href="#">Link</a></td>
                         <td>Springer</td>
                      </tr>
-                     <tr>
+                     <tr style="font-size: 12px;">
                         <th scope="row">J</th>
 
                         <td>Enhancing the Cybersecurity of Advanced Nuclear Power Plants through Generative AI and Large
@@ -351,7 +351,7 @@
                         <td><a href="#">Link</a></td>
                         <td>IEEE</td>
                      </tr>
-                     <tr>
+                     <tr style="font-size: 12px;">
                         <th scope="row">J</th>
 
                         <td>Natural Language Processing for Predictive Maintenance in Nuclear Power Plant: Digital Twin
@@ -359,21 +359,21 @@
                         <td><a href="#">Link</a></td>
                         <td>IEEE</td>
                      </tr>
-                     <tr>
+                     <tr style="font-size: 12px;">
                         <th scope="row">B</th>
 
                         <td>AutoML Systems For Medical Imaging</td>
                         <td><a href="#">Link</a></td>
                         <td>Springer</td>
                      </tr>
-                     <tr>
+                     <tr style="font-size: 12px;">
                         <th scope="row">A</th>
 
                         <td>A Novel Hierarchical Federated Learning with Self-Regulated Decentralized Clustering</td>
                         <td><a href="#">Link</a></td>
                         <td>ACM</td>
                      </tr>
-                     <tr>
+                     <tr style="font-size: 12px;">
                         <th scope="row">C</th>
 
                         <td>Machine Learning and Sentiment Analysis for Predicting Environmental Lead Toxicity in
@@ -381,35 +381,35 @@
                         <td><a href="#">Link</a></td>
                         <td>IEEE</td>
                      </tr>
-                     <tr>
+                     <tr style="font-size: 12px;">
                         <th scope="row">A</th>
 
                         <td>Prediction of Childhood and Pregnancy Lead Poisoning Using Deep Learning</td>
                         <td><a href="#">Link</a></td>
                         <td>ACM</td>
                      </tr>
-                     <tr>
+                     <tr style="font-size: 12px;">
                         <th scope="row">A</th>
 
                         <td>Federated Learning-based Contraband Detection within Airport Baggage X-Rays</td>
                         <td><a href="#">Link</a></td>
                         <td>ACM</td>
                      </tr>
-                     <tr>
+                     <tr style="font-size: 12px;">
                         <th scope="row">B</th>
 
                         <td>Active learning on medical image</td>
                         <td><a href="#">Link</a></td>
                         <td>Springer</td>
                      </tr>
-                     <tr>
+                     <tr style="font-size: 12px;">
                         <th scope="row">C</th>
 
                         <td>Towards Federated Learning Based Contraband Detection Within Airport Baggage X-Rays</td>
                         <td><a href="#">Link</a></td>
                         <td>IEEE</td>
                      </tr>
-                     <tr>
+                     <tr style="font-size: 12px;">
                         <th scope="row">C</th>
 
                         <td>Collaborative Differentially Private Federated Learning Framework for the Prediction of
@@ -417,7 +417,7 @@
                         <td><a href="#">Link</a></td>
                         <td>IEEE</td>
                      </tr>
-                     <tr>
+                     <tr style="font-size: 12px;">
                         <th scope="row">B</th>
 
                         <td>Introduction of Medical Imaging Modalities</td>
@@ -498,7 +498,7 @@
          <div class="col-md-3 col-xs-8">
             <h5>UPDATES</h5>
             <div class="overflow-auto p-3 bg-body-tertiary" style="max-height: 800px;">
-               <div class="list-group">
+               <div class="list-group" style="font-size: 12px;">
 
                   <a href="https://ieeecompsac.computer.org/2024/"
                      class="list-group-item list-group-item-action flex-column align-items-start active">
