--- a/about.html
+++ b/about.html
@@ -178,106 +178,136 @@
                an opportunity to collaborate
                with the Suwon team on diverse projects at Samsung Digital City in Suwon, Korea.
             </div>
-
             <hr>
             <h5>Professional Experience</h5>
-            <ul class="ul-dates">
-               <li>
-                  <div class="content">
-                     <b>Teaching Assistant</b><br><span class="duration"></span>
-                     <div><i>January 2024 – Present</i>
-                     </div>
-                     <div><i>School of Computing</i>
-                     </div>
-                     <div>
-                        <ul>
-                           <li>Preparing lecture notes/slides on a given topic</li>
-                           <li>Conducting classes of "Design and Analysis of Algorithms" and "Learning from Data"</li>
-                           <li>Mentoring both Undergrad and Grad students</li>
-                           <li>Grading Quizzes, Assignments, Exams, Projects and Presentation</li>
-                         </ul>                         
-                     </div>
-                  </div>
-               </li>
-            </ul>
-            <ul class="ul-dates">
-               <li>
-                  <div class="content">
-                     <b>Research Assistant</b><br><span class="duration"></span>
-                     <div><i>August 2022 – Present</i>
-                     </div>
-                     <div><i>SUPREME Lab.</i>
-                     </div>
-                     <div>
-                        <ul>
-                           <li>Conduct in-depth literature reviews to understand the prior arts</li>
-                           <li>Collaborate with researchers to design, develop, and optimize algorithms</li>
-                           <li>Collect and analyze data for experiments, simulations, or data-driven research projects</li>
-                           <li>Write and maintain code for research projects, including feature engineering, model evaluation, and optimization</li>
-                           <li>Work with models like Transformers (BERT, GPT), CNN, RNN, LSTM, YOLO, Traditional (KNN, K-means, Random Forest, Decision Tree, Boosting, Bagging)</li>
-                           <li>Write the research papers at Overleaf collaboratively and prepare the presentations for conferences, and journals</li>
-                           <li>Assist in training and mentoring junior research assistants, and undergraduate students</li>
-                           <li>Participate in online Machine Learning and NLP competitions (e.g. Kaggle)</li>
-                           <li>Led a team for the Cyberforce23 competition</li>
-                         </ul>                         
-                     </div>
-                  </div>
-               </li>
-            </ul>
-            <ul class="ul-dates">
-               <li>
-                  <div class="content">
-                     <b>Former Sr. Software Engineer</b><br><span class="duration"></span>
-                     <div><i>February 2019 – August 2022</i>
-                     </div>
-                     <div><i>Samsung R&D Institute Bangladesh</i>
-                     </div>
-                     <div><i>Worked as a full stack web application developer at Software Engineering division of
-                           Samsung Network Lab.</i>
-                     </div>
-                     <div>
-                        <ul>
-                           <li>Development and testing of software modules</li>
-                           <li>Static analysis and process improvement</li>
-                           <li>Improvement and optimization of legacy software systems</li>
-                           <li>Remote collaboration with clients and mentoring new team members</li>
-                           <li>Business trip to Suwon, South Korea for new module release</li>
-                           <li>Project initiating and driving to completion with minimal guidance</li>
-                           <li>Worked on innovative idea and patent generation</li>
-                           <li>Completed 100+ Jira Tasks and resolved about 20+ PLM issues with the least TAT count[4.5]
-                           </li>
-                           <li>Best contributor in Aug’22 [800+ commits, 50+ Pull Request and 300+ reviews]</li>
-                        </ul>
-                     </div>
-                  </div>
-               </li>
-            </ul>
+            <div class="card">
+               <div class="card-body">
+                  <ul class="ul-dates">
+                     <li>
+                        <div class="d-flex justify-content-between">
+                           <div class="content">
+                              <b>Teaching Assistant</b>
+                              <div><i>January 2024 – Present</i>
+                              </div>
+                              <div><i>School of Computing</i>
+                              </div>
+                              <div>
+                                 <ul>
+                                    <li>Preparing lecture notes/slides on a given topic</li>
+                                    <li>Conducting classes of "Design and Analysis of Algorithms" and "Learning from Data"</li>
+                                    <li>Mentoring both Undergrad and Grad students</li>
+                                    <li>Grading Quizzes, Assignments, Exams, Projects and Presentation</li>
+                                 </ul>                         
+                              </div>
+                           </div>
+                           <div><img src="images/siu-cs-logo.png" width="200" height="50" /></div>
+                        </div>
+                        
+                     </li>
+                  </ul>
+               </div>
+            </div>
+            <br/>
+            <div class="card">
+               <div class="card-body">
+                  <ul class="ul-dates">
+                     <li>
+                        <div class="d-flex justify-content-between">
+                           <div class="content">
+                              <b>Research Assistant</b><br>
+                              <div><i>August 2022 – Present</i>
+                              </div>
+                              <div><i>SUPREME Lab.</i>
+                              </div>
+                              <div>
+                                 <ul>
+                                    <li>Conduct in-depth literature reviews to understand the prior arts</li>
+                                    <li>Collaborate with researchers to design, develop, and optimize algorithms</li>
+                                    <li>Collect and analyze data for experiments, simulations, or data-driven research projects</li>
+                                    <li>Write and maintain code for research projects, including feature engineering, model evaluation, and optimization</li>
+                                    <li>Work with models like Transformers (BERT, GPT), CNN, RNN, LSTM, YOLO, Traditional (KNN, K-means, Random Forest, Decision Tree, Boosting, Bagging)</li>
+                                    <li>Write the research papers at Overleaf collaboratively and prepare the presentations for conferences, and journals</li>
+                                    <li>Assist in training and mentoring junior research assistants, and undergraduate students</li>
+                                    <li>Participate in online Machine Learning and NLP competitions (e.g. Kaggle)</li>
+                                    <li>Led a team for the Cyberforce23 competition</li>
+                                  </ul>                         
+                              </div>
+                           </div>
+                           <div><img src="images/supremelab-logo.png" width="200" height="50" /></div>
+                        </div>
+                     </li>
+                  </ul>
+               </div>
+            </div>
+            <br/>
+            <div class="card">
+               <div class="card-body">
+                  <ul class="ul-dates">
+                     <li>
+                        <div class="d-flex justify-content-between">
+                           <div class="content">
+                              <b>Sr. Software Engineer</b><br><span class="duration"></span>
+                              <div><i>February 2019 – August 2022</i>
+                              </div>
+                              <div><i>Samsung R&D Institute Bangladesh</i>
+                              </div>
+                              <div><i>Worked as an innovator and a full stack web application developer at Software Engineering division of
+                                    Samsung Network Lab.</i>
+                              </div>
+                              <div>
+                                 <ul>
+                                    <li>Worked on innovative idea and patent generation</li>
+                                    <li>Development and testing of software modules</li>
+                                    <li>Static analysis and process improvement</li>
+                                    <li>Improvement and optimization of legacy software systems</li>
+                                    <li>Remote collaboration with clients and mentoring new team members</li>
+                                    <li>Business trip to Suwon, South Korea for new module release</li>
+                                    <li>Project initiating and driving to completion with minimal guidance</li>
+                                    <li>Completed 100+ Jira Tasks and resolved about 20+ PLM issues with the least TAT count[4.5]
+                                    </li>
+                                    <li>Best contributor in Aug’22 [800+ commits, 50+ Pull Request and 300+ reviews]</li>
+                                 </ul>
+                              </div>
+                           </div>
+                           <div><img src="images/samsung-research.png" width="250" height="50" /></div>
+                        </div>
+                     </li>
+                  </ul>
+               </div>
+            </div>
             <hr>
             <h5>Programming Skill</h5>
-            <ul class="ul-dates">
-               <li>
-                  <div class="content">
-                     <b>Competitive Programmer</b><br><span class="duration"></span>
-                     <div>
-                        <ul>
-                           <li>Solved 1000+ problems in different Online Judge (i.e. Leetcode, Codeforces, Uva,
-                              LightOj, SPOJ)</li>
-                           <li>Participation, ACM International Collegiate Programming Contest (ICPC), Dhaka Regional
-                           </li>
-                           <li>Participation, National and Divisional level Programming Contests</li>
-                           <li>Participation, Problem-solving and weekly practice contest, and monthly programming
-                              contests that are organized by Samsung.</li>
-                           <li>Business trip to Suwon, South Korea for new module release</li>
-                           <li>Capability of analyzing program time and memory complexity</li>
-                           <li>Expertise in Data Structures (LinkedList, Stack, Queue, Heap, HashMap, Trie Tree, BST)
-                              and Algorithms
-                              (Binary Search, Graph Theory, Dynamic Programming, Number Theory)</li>
-                        </ul>
-                     </div>
-                  </div>
-               </li>
-            </ul>
-
+            <div class="card">
+               <div class="card-body">
+                  <ul class="ul-dates">
+                     <li>
+                           <div class="d-flex justify-content-between">
+                              <div class="content">
+                                 <b>Competitive Programmer</b><br><span class="duration"></span>
+                                 <div>
+                                    <ul>
+                                       <li>Solved 1000+ problems in different Online Judge (i.e. Leetcode, Codeforces, Uva,
+                                          LightOj, SPOJ)</li>
+                                       <li>Participation, ACM International Collegiate Programming Contest (ICPC), Dhaka Regional
+                                       </li>
+                                       <li>Participation, National and Divisional level Programming Contests</li>
+                                       <li>Participation, Problem-solving and weekly practice contest, and monthly programming
+                                          contests that are organized by Samsung.</li>
+                                       <li>Business trip to Suwon, South Korea for new module release</li>
+                                       <li>Capability of analyzing program time and memory complexity</li>
+                                       <li>Expertise in Data Structures (LinkedList, Stack, Queue, Heap, HashMap, Trie Tree, BST)
+                                          and Algorithms
+                                          (Binary Search, Graph Theory, Dynamic Programming, Number Theory)</li>
+                                    </ul>
+                                 </div>
+                              
+                              </div>
+                              <div><img src="images/programming-logo.webp" width="250" height="150" /></div>
+                           </div>
+                     </li>
+                  </ul>
+               </div>
+            </div>
       </div>
    </div>
 
