updates section is updated

--- a/index.html
+++ b/index.html
@@ -500,8 +500,20 @@
             <div class="overflow-auto p-3 bg-body-tertiary" style="max-height: 800px;">
                <div class="list-group" style="font-size: 12px;">
 
-                  <a href="https://ieeecompsac.computer.org/2024/"
+                  <a href="#"
                      class="list-group-item list-group-item-action flex-column align-items-start active">
+                     <div class="d-flex w-100 justify-content-between">
+                        <h6 class="mb-1">ICWSM'24 Student Travel Award</h6>
+                     </div>
+                     <p class="mb-1">I have received $1300, ICWSM Student Travel Award.</p>
+                     <div>
+                        <span class="badge badge-success">ICWSM</span>
+                        <span class="badge badge-primary">Conference</span>
+                     </div>
+                  </a>
+
+                  <a href="https://ieeecompsac.computer.org/2024/"
+                     class="list-group-item list-group-item-action flex-column align-items-start">
                      <div class="d-flex w-100 justify-content-between">
                         <h6 class="mb-1">ASONAM 2024</h6>
                         <small></small>
@@ -513,7 +525,6 @@
                         <span class="badge badge-primary">Springer</span>
                      </div>
                   </a>
-
                   <a href="https://ieeecompsac.computer.org/2024/"
                      class="list-group-item list-group-item-action flex-column align-items-start">
                      <div class="d-flex w-100 justify-content-between">
@@ -527,7 +538,6 @@
                         <span class="badge badge-primary">IEEE</span>
                      </div>
                   </a>
-
                   <a href="https://www.icwsm.org/2024/index.html/"
                      class="list-group-item list-group-item-action flex-column align-items-start">
                      <div class="d-flex w-100 justify-content-between">
@@ -546,7 +556,6 @@
                         <span class="badge badge-success">AAAI</span>
                      </div>
                   </a>
-
                   <a href="https://cyberforce.energy.gov/cyberforce-competition/prior-competitions/doe-cyberforce-competition-2023/"
                      class="list-group-item list-group-item-action flex-column align-items-start">
                      <div class="d-flex w-100 justify-content-between">
@@ -561,7 +570,6 @@
                         <span class="badge badge-primary">Competition</span>
                      </div>
                   </a>
-
                   <a href="#" class="list-group-item list-group-item-action flex-column align-items-start">
                      <div class="d-flex w-100 justify-content-between">
                         <h6 class="mb-1">ACM/IEEE ASONAM 2023</h6>
@@ -575,7 +583,6 @@
                         <span class="badge badge-secondary">ACM</span>
                      </div>
                   </a>
-
                   <a href="#" class="list-group-item list-group-item-action flex-column align-items-start">
                      <div class="d-flex w-100 justify-content-between">
                         <h6 class="mb-1">Data-driven approaches to Medical Imaging</h6>
@@ -588,7 +595,6 @@
                         <span class="badge badge-primary">Springer</span>
                      </div>
                   </a>
-
                   <a href="#" class="list-group-item list-group-item-action flex-column align-items-start">
                      <div class="d-flex w-100 justify-content-between">
                         <h6 class="mb-1">Expert Opinion on Cybersecurity and Ransomware</h6>
