--- a/index.html
+++ b/index.html
@@ -186,6 +186,9 @@
                      <img class="d-block w-100 slider-img" src="images/figures/23.png" alt="Second slide">
                   </div>
                   <div class="carousel-item">
+                     <img class="d-block w-100 slider-img" src="images/figures/24.png" alt="Second slide">
+                  </div>
+                  <div class="carousel-item">
                      <img class="d-block w-100 slider-img" src="images/figures/17.png" alt="Second slide">
                   </div>
                   <div class="carousel-item">
