--- a/publication.html
+++ b/publication.html
@@ -271,6 +271,9 @@
                     aria-expanded="false" aria-controls="bib6">Bibtext</a>
                     <a class="btn btn-danger btn-sm" href="https://ojs.aaai.org/index.php/ICWSM/article/view/31337/33497" role="button" 
                     >PDF</a>
+                    <a href="https://www.youtube.com/watch?v=iV32_VhpOA4"
+                    aria-expanded="false" aria-controls="video7">
+                    <img width="50" height="30" src="images/youtube-logo.png" title="Youtube"/></a>
                   </div>
                   <div>
                     <img width="100" height="40" src="images/icons/icwsm-logo.png" class="img-responsive">
