--- a/about.html
+++ b/about.html
@@ -52,9 +52,9 @@
 </head>
 
 <body>
-   <nav class="navbar sticky-top navbar-expand-md navbar-dark"  style="background: rgb(138, 8, 8);">
+   <nav class="navbar sticky-top navbar-expand-md navbar-dark"  style="background: rgb(12, 1, 59);">
       <a class="navbar-brand" href="#"><span>
-         <img src="images/logo.png" /></span></a>
+         <img src="images/utep-logo.png" /></span></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
       <span class="navbar-toggler-icon"></span>
       </button>
@@ -311,7 +311,7 @@
       </div>
    </div>
 
-   <footer class="footer mt-auto py-3" style="background: rgb(138, 8, 8);">
+   <footer class="footer mt-auto py-3" style="background: rgb(12, 1, 59);">
       <div class="container">
          <span class="text-light">
             <p>&copy; 2024 All Rights Reserve to Ismail Hossain </p>
