--- a/blog.html
+++ b/blog.html
@@ -7673,9 +7673,9 @@ all of MD as it is not optimized for dense, information rich UIs.
 </head>
 
 <body class="jp-Notebook" data-jp-theme-light="true" data-jp-theme-name="JupyterLab Light">
-  <nav class="navbar sticky-top navbar-expand-md navbar-dark" style="background: rgb(138, 8, 8);">
+  <nav class="navbar sticky-top navbar-expand-md navbar-dark" style="background: rgb(12, 1, 59);">
     <a class="navbar-brand" href="#"><span>
-        <img src="images/logo.png" /></span></a>
+        <img src="images/utep-logo.png" /></span></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
       <span class="navbar-toggler-icon"></span>
     </button>
