updated lab website

--- a/blog.html
+++ b/blog.html
@@ -7688,7 +7688,7 @@ all of MD as it is not optimized for dense, information rich UIs.
           <a class="nav-link text-color" href="publication.html">Publications</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link text-color" href="https://www2.cs.siu.edu/~stalukder/supremelab/index.html">Research
+          <a class="nav-link text-color" href="https://www.cs.utep.edu/stalukder/supremelab/index.html">Research
             Lab</a>
         </li>
         <li class="nav-item">
@@ -7723,7 +7723,7 @@ all of MD as it is not optimized for dense, information rich UIs.
             <div class="card-text" style="text-align: center;">
               <b>Ph.D Student</b>
               <br><b>Researcher Assistant</b>, <a
-                href="https://www2.cs.siu.edu/~stalukder/supremelab/index.html"><b>S</b>ec<b>u</b>rity and
+                href="https://www.cs.utep.edu/stalukder/supremelab/index.html"><b>S</b>ec<b>u</b>rity and
                 <b>Pr</b>ivacy <b>E</b>nhanced <b>M</b>achine L<b>e</b>arning (SUPREME) Lab</a>
               <!-- <br>Engineering A321, School of Computing
                            <br>Southern Illinois University
