--- a/about.html
+++ b/about.html
@@ -149,12 +149,12 @@
 
             <!-- Articles -->
             <div class="bio">
-               I am enrolled in a Ph.D. program at the School of Computing in Southern Illinois University.
+               I am enrolled in a Ph.D. program in computer science at the University of Texas at El Paso.
                My educational background includes a B.Sc. degree in Computer Science and Engineering from Chittagong
                University of Engineering and Technology (CUET).
                I have been working as a researcher at the SUPREME Lab since Fall'22 under the guidance of Professor
                Dr. Sajedul Talukder.
-               My primary research focus revolves around areas such as Federated Learning, Machine Learning, Deep
+               My primary research focus revolves around areas such as Large Language Model (LLM), Federated Learning, Machine Learning, Deep
                Learning, Natural Language Processing (NLP),
                and Social Networks. Previously, I worked as a senior software engineer at Samsung R&D Institute
                Bangladesh,
