Eduction updated with the utep info

--- a/education.html
+++ b/education.html
@@ -183,58 +183,81 @@
             <h5>Education</h5>
             <div class="row">
                <div class="col-md-6">
-                     <div class="content">
-                        <b>Ph.D. in Computer Science</b><br><span class="duration"></span>
-                        <div><i>(Fall 2022 - Current)</i>
-                        </div>
-                        <div><i>Souther Illinois University, Carbondale</i>
-                        </div>
-                        <div>
-                           Illinois, USA.
-                        </div>
+                  <div class="content">
+                     <b>Ph.D. in Computer Science</b><br><span class="duration"></span>
+                     <div><i>(Fall 2024 - Present)</i>
                      </div>
-                     <div class="content">
-                        <b>B.S. in Computer Science & Engineering</b><br><span class="duration"></span>
-                        <div><i>(March 2014 - November 2018)</i>
-                        </div>
-                        <div><i>Chittagong University of Engineering & Technology (CUET)</i>
-                        </div>
-                        <div>
-                           Chittagong, Bangladesh.
-                        </div>
+                     <div><i>University of Texas at El Paso</i>
                      </div>
-                     <div class="content">
-                        <b>Higher Secondary Certificate (HSC)</b><br><span class="duration"></span>
-                        <div><i>(June 2011 - June 2013)</i>
-                        </div>
-                        <div><i>Birshrestha Noor Mohammad Public College</i>
-                        </div>
-                        <div>
-                           Dhaka, Bangladesh.
-                        </div>
+                     <div>
+                        Texas, USA.
                      </div>
-                     <div class="content">
-                        <b>Secondary School Certificate (SSC)</b><br><span class="duration"></span>
-                        <div><i>(January 2006 - March 2011)</i>
-                        </div>
-                        <div><i>Chatkhil P.G. Govt. High School</i>
-                        </div>
-                        <div>
-                           Noakhali, Bangladesh.
-                        </div>
+                  </div>
+                  <div class="content">
+                     <b>Ph.D. in Computer Science</b><br><span class="duration"></span>
+                     <div><i>(Fall 2022 - Summer 2024)</i>
                      </div>
-                     <div class="content">
-                        <b>Primary School Certificate (PSC)</b><br><span class="duration"></span>
-                        <div><i>(January 2002 - December 2005)</i>
-                        </div>
-                        <div><i>Onirban Shikshma Niketan</i>
-                        </div>
-                        <div>
-                           Noakhali, Bangladesh.
-                        </div>
+                     <div><i>Souther Illinois University, Carbondale</i>
                      </div>
+                     <div>
+                        Illinois, USA.
+                     </div>
+                  </div>
+                  <div class="content">
+                     <b>B.S. in Computer Science & Engineering</b><br><span class="duration"></span>
+                     <div><i>(March 2014 - November 2018)</i>
+                     </div>
+                     <div><i>Chittagong University of Engineering & Technology (CUET)</i>
+                     </div>
+                     <div>
+                        Chittagong, Bangladesh.
+                     </div>
+                  </div>
+                  <div class="content">
+                     <b>Higher Secondary Certificate (HSC)</b><br><span class="duration"></span>
+                     <div><i>(June 2011 - June 2013)</i>
+                     </div>
+                     <div><i>Birshrestha Noor Mohammad Public College</i>
+                     </div>
+                     <div>
+                        Dhaka, Bangladesh.
+                     </div>
+                  </div>
+                  <div class="content">
+                     <b>Secondary School Certificate (SSC)</b><br><span class="duration"></span>
+                     <div><i>(January 2006 - March 2011)</i>
+                     </div>
+                     <div><i>Chatkhil P.G. Govt. High School</i>
+                     </div>
+                     <div>
+                        Noakhali, Bangladesh.
+                     </div>
+                  </div>
+                  <div class="content">
+                     <b>Primary School Certificate (PSC)</b><br><span class="duration"></span>
+                     <div><i>(January 2002 - December 2005)</i>
+                     </div>
+                     <div><i>Onirban Shikshma Niketan</i>
+                     </div>
+                     <div>
+                        Noakhali, Bangladesh.
+                     </div>
+                  </div>
                </div>
                <div class="col-md-5">
+                  <div class="d-flex">
+                     <!--Google map-->
+                     <div>
+                           <img src="images/education/utep-logo.PNG" width="90" height="50" />
+                     </div>
+                     <div id="map-container-google-2" class="z-depth-1-half map-container"
+                        style="height: 100px">
+                        <iframe
+                           src="https://www.google.com/maps/embed?pb=!1m28!1m12!1m3!1d9875.888216275622!2d-106.50551537134832!3d31.763579842286642!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m13!3e6!4m5!1s0x86e75859acf33e5d%3A0xc23384e4781eae99!2sChemistry%20and%20Computer%20Science%20Building%2C%20Chemistry%20and%20Computer%20Science%20Building%2C%20IC-10%2C%20Hawthorne%20Street%2C%20El%20Paso%2C%20TX!3m2!1d31.767926099999997!2d-106.50207499999999!4m5!1s0x86e75859acf33e5d%3A0xc23384e4781eae99!2s1801-2021%20Hawthorne%20St%2C%20El%20Paso%2C%20TX%2079902!3m2!1d31.767926099999997!2d-106.50207499999999!5e0!3m2!1sen!2sus!4v1730746109294!5m2!1sen!2sus"
+                           width="200" height="90" style="border:0;" allowfullscreen="" loading="lazy"
+                           referrerpolicy="no-referrer-when-downgrade"></iframe>
+                     </div>
+                  </div>
                   <div class="d-flex">
                      <!--Google map-->
                      <div>
@@ -294,7 +317,9 @@
          </div><!--/Center Column-->
 
          <div class="col-md-3">
-            <h5>Campus Tour</h5>
+            <h5>Campus View</h5>
+            <iframe class="youtube-video" src="https://www.youtube.com/embed/iAPbNEELpaU" 
+            title="UTEP Campus" allowfullscreen></iframe>
             <iframe class="youtube-video" src="https://www.youtube.com/embed/0hpKkdsP48I" 
             title="SIU Campus" allowfullscreen></iframe>
             <iframe class="youtube-video" src="https://www.youtube.com/embed/vLeRR67S1TM" 
