wrote new update

--- a/index.html
+++ b/index.html
@@ -504,6 +504,17 @@
                   <a href="#"
                      class="list-group-item list-group-item-action flex-column align-items-start active">
                      <div class="d-flex w-100 justify-content-between">
+                        <h6 class="mb-1">Started PhD in University of Texas at El Paso</h6>
+                     </div>
+                     <p class="mb-1">My Professor joined the CS Faculty at UTEP along with his PhD students.</p>
+                     <div>
+                        <span class="badge badge-success">SUPREME LAB</span>
+                        <span class="badge badge-primary">UTEP</span>
+                     </div>
+                  </a>
+                  <a href="#"
+                     class="list-group-item list-group-item-action flex-column align-items-start">
+                     <div class="d-flex w-100 justify-content-between">
                         <h6 class="mb-1">ICWSM'24 Student Travel Award</h6>
                      </div>
                      <p class="mb-1">I have received $1300, ICWSM Student Travel Award.</p>
