unnessary code is commented

--- a/index.html
+++ b/index.html
@@ -470,7 +470,7 @@
             </ul>
             <hr>
 
-            <div class="card-group">
+            <!-- <div class="card-group">
                <div class="card">
                   <img class="card-img-top" src="images\System-Architecture-new.png" alt="Card image cap">
                   <div class="card-body">
