code modified and changed css in the programing html file

--- a/about.html
+++ b/about.html
@@ -59,29 +59,33 @@
       <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="collapsibleNavbar">
-      <ul class="navbar-nav">
-         <li class="nav-item">
-            <a class="nav-link" href="index.html">Home</a>
-         </li>
-         <li class="nav-item">
-            <a class="nav-link text-color" href="publication.html">Publications</a>
-         </li>
-         <li class="nav-item">
-            <a class="nav-link text-color" href="https://www.cs.utep.edu/stalukder/supremelab/index.html">Research Lab</a>
-         </li>
-         <li class="nav-item">
-            <a class="nav-link text-color" href="education.html">Education</a>
-         </li>
-         <li class="nav-item">
-            <a class="nav-link text-color" href="achievements.html">Achievements</a>
-         </li>
-         <li class="nav-item">
-            <a class="nav-link text-color" href="about.html">About</a>
-         </li>
-         <li><a class="nav-link text-color" href="blog.html">Blog</a></li>
-         <li><a class="nav-link text-color" href="gallery.html">Gallery</a></li>
-         <li><a class="nav-link text-color" href="resources.html">Resources</a></li>
-      </ul>
+         <ul class="navbar-nav">
+            <li class="nav-item">
+               <a class="nav-link" href="index.html">Home</a>
+            </li>
+            <li class="nav-item">
+               <a class="nav-link text-color" href="publication.html">Publications</a>
+            </li>
+            <li class="nav-item">
+               <a class="nav-link text-color" href="https://www.cs.utep.edu/stalukder/supremelab/index.html">Research
+                  Lab</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link text-color" href="programming.html">Programming</a>
+           </li>
+           <li class="nav-item">
+              <a class="nav-link text-color" href="achievements.html">Achievements</a>
+           </li>
+            <li class="nav-item">
+               <a class="nav-link text-color" href="education.html">Education</a>
+            </li>
+            <li class="nav-item">
+               <a class="nav-link text-color" href="about.html">About</a>
+            </li>
+            <li><a class="nav-link text-color" href="blog.html">Blog</a></li>
+            <li><a class="nav-link text-color" href="resources.html">Resources</a></li>
+            <li><a class="nav-link text-color" href="gallery.html">Gallery</a></li>
+         </ul>
       </div>  
    </nav>
    <br>
