--- a/education.html
+++ b/education.html
@@ -107,17 +107,20 @@
                   Lab</a>
             </li>
             <li class="nav-item">
-               <a class="nav-link text-color" href="education.html">Education</a>
-            </li>
+              <a class="nav-link text-color" href="programming.html">Programming</a>
+           </li>
+           <li class="nav-item">
+              <a class="nav-link text-color" href="achievements.html">Achievements</a>
+           </li>
             <li class="nav-item">
-               <a class="nav-link text-color" href="achievements.html">Achievements</a>
+               <a class="nav-link text-color" href="education.html">Education</a>
             </li>
             <li class="nav-item">
                <a class="nav-link text-color" href="about.html">About</a>
             </li>
             <li><a class="nav-link text-color" href="blog.html">Blog</a></li>
-            <li><a class="nav-link text-color" href="gallery.html">Gallery</a></li>
             <li><a class="nav-link text-color" href="resources.html">Resources</a></li>
+            <li><a class="nav-link text-color" href="gallery.html">Gallery</a></li>
          </ul>
       </div>
    </nav>
