--- a/gallery.html
+++ b/gallery.html
@@ -61,29 +61,31 @@
         <div class="collapse navbar-collapse" id="collapsibleNavbar">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="index.html">Home</a>
+                   <a class="nav-link" href="index.html">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-color" href="publication.html">Publications</a>
+                   <a class="nav-link text-color" href="publication.html">Publications</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-color"
-                        href="https://www.cs.utep.edu/stalukder/supremelab/index.html">Research
-                        Lab</a>
+                   <a class="nav-link text-color" href="https://www.cs.utep.edu/stalukder/supremelab/index.html">Research
+                      Lab</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-color" href="education.html">Education</a>
+                  <a class="nav-link text-color" href="programming.html">Programming</a>
+               </li>
+               <li class="nav-item">
+                  <a class="nav-link text-color" href="achievements.html">Achievements</a>
+               </li>
+                <li class="nav-item">
+                   <a class="nav-link text-color" href="education.html">Education</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-color" href="achievements.html">Achievements</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link text-color" href="about.html">About</a>
+                   <a class="nav-link text-color" href="about.html">About</a>
                 </li>
                 <li><a class="nav-link text-color" href="blog.html">Blog</a></li>
-                <li><a class="nav-link text-color" href="gallery.html">Gallery</a></li>
                 <li><a class="nav-link text-color" href="resources.html">Resources</a></li>
-            </ul>
+                <li><a class="nav-link text-color" href="gallery.html">Gallery</a></li>
+             </ul>
         </div>
         </div>
     </nav>
